force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/Apttus_Billing__BillingSchedule__c.object-meta.xml
<CustomObject>
    <description>Represents a billing schedule for a product or service</description>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BS-{00000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>