force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__AgreementLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AgreementLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated agreement line item</description>
    <inlineHelpText>ID of the associated agreement line item</inlineHelpText>
    <label>Agreement Line Item</label>
    <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>