force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__AssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AssetLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated asset line item</description>
    <inlineHelpText>ID of the associated asset line item</inlineHelpText>
    <label>Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>