force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__BillingDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingDayOfMonth__c</fullName>
    <description>The Billing Day of Month based on the alignment settings of the affiliate Billing Preference at the time of Schedule creation.</description>
    <inlineHelpText>The Billing Day of Month based on the alignment settings of the affiliate Billing Preference at the time of Schedule creation.</inlineHelpText>
    <label>Billing Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>