force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__BillingPlanItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingPlanItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated billing plan item</description>
    <inlineHelpText>ID of the associated billing plan item</inlineHelpText>
    <label>Billing Plan Item</label>
    <referenceTo>Apttus_Config2__BillingPlanItem__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>