force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__BillingRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingRule__c</fullName>
    <description>The Billing Rule associated with the Price List Item</description>
    <inlineHelpText>The Billing Rule associated with the Price List Item</inlineHelpText>
    <label>Billing Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill In Advance</fullName>
            </value>
            <value>
                <fullName>Bill In Arrears</fullName>
            </value>
            <value>
                <fullName>Milestone Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>