force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the bill to account</description>
    <inlineHelpText>ID of the bill to account</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>