force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Category__c</fullName>
    <description>The category associated with the schedule</description>
    <inlineHelpText>The category associated with the schedule</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fee</fullName>
                <default>true</default>
                <label>Fee</label>
            </value>
            <value>
                <fullName>Cart Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>