force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>The schedule description</description>
    <inlineHelpText>The schedule description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>