force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DiscountAmount__c</fullName>
    <description>The discount amount. Only applicable for discount schedules</description>
    <inlineHelpText>The discount amount. Only applicable for discount schedules</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>