force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FeeAmount__c</fullName>
    <description>The fee amount. Only applicable for fee schedules</description>
    <inlineHelpText>The fee amount. Only applicable for fee schedules</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>