force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__InvoiceItemGroup__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceItemGroup__c</fullName>
    <description>The invoice item group the schedule belongs to. Multiple billing schedules may be grouped into a single invoice line item.</description>
    <inlineHelpText>The invoice item group the schedule belongs to. Multiple billing schedules may be grouped into a single invoice line item.</inlineHelpText>
    <label>Invoice Item Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>