force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__LegalEntityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LegalEntityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the optional Legal Entity. A value of null implies there is no corresponding Legal Entity.</description>
    <inlineHelpText>The Id of the optional Legal Entity.</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>