force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__LocationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated Account Location</description>
    <inlineHelpText>ID of the associated Account Location</inlineHelpText>
    <label>Location</label>
    <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>