force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__OrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__OrderLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Order Line Item</description>
    <inlineHelpText>The ID of the associated Order Line Item</inlineHelpText>
    <label>Order Line Item</label>
    <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>