force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PeriodStartDate__c</fullName>
    <description>The billing period start date</description>
    <inlineHelpText>The billing period start date</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>