force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__ProposalLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProposalLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal line item</description>
    <inlineHelpText>ID of the associated quote/proposal line item</inlineHelpText>
    <label>Quote Line Item</label>
    <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>