force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__ReadyForInvoicingDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReadyForInvoicingDate__c</fullName>
    <description>The time when the order is ready for invoicing</description>
    <inlineHelpText>The time when the order is ready for invoicing</inlineHelpText>
    <label>Ready For Invoicing Time</label>
    <type>DateTime</type>
</CustomField>