force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__ShipToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ship-to Account</description>
    <inlineHelpText>ID of the ship-to Account</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedules (Ship To)</relationshipLabel>
    <relationshipName>Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>