force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>The schedule status</description>
    <inlineHelpText>The schedule status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Milestone</fullName>
            </value>
            <value>
                <fullName>Pending Billing</fullName>
                <default>true</default>
                <label>Pending Billing</label>
            </value>
            <value>
                <fullName>Pending Invoiced</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Invoiced Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>