force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Subcategory__c</fullName>
    <description>The subcategory associated with the schedule</description>
    <inlineHelpText>The subcategory associated with the schedule</inlineHelpText>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Discount</fullName>
            </value>
            <value>
                <fullName>Channel Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>