force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__SupersededScheduleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SupersededScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Id of the Billing Schedule that is being superseded by this Billing schedule.  For a new Billing Schedule this Id will be null.</description>
    <inlineHelpText>This is the Id of the Billing Schedule that is being superseded by this Billing schedule.  For a new Billing Schedule this Id will be null.</inlineHelpText>
    <label>Superseded Billing Schedule</label>
    <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
    <relationshipLabel>Superseded Billing Schedules</relationshipLabel>
    <relationshipName>SupersededScheduleId</relationshipName>
    <type>Lookup</type>
</CustomField>