force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TaxAmount__c</fullName>
    <description>The tax amount. Only applicable for tax schedules</description>
    <inlineHelpText>The tax amount. Only applicable for tax schedules</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>