force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/fields/Apttus_Billing__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Type__c</fullName>
    <description>The schedule type</description>
    <inlineHelpText>The schedule type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evergreen</fullName>
            </value>
            <value>
                <fullName>Forecasted</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
                <default>true</default>
                <label>Contracted</label>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>