force-app/main/default/objects/Apttus_Billing__BillingSchedule__c/listViews/Apttus_Billing__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__AssetLineItemId__c</columns>
    <columns>Apttus_Billing__BillToAccountId__c</columns>
    <columns>Apttus_Billing__FeeAmount__c</columns>
    <columns>Apttus_Billing__Quantity__c</columns>
    <columns>Apttus_Billing__PeriodStartDate__c</columns>
    <columns>Apttus_Billing__PeriodEndDate__c</columns>
    <columns>Apttus_Billing__ReadyForInvoiceDate__c</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <columns>Apttus_Billing__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>